syntax = "proto3";

package user;

option go_package = "./user";

message Empty {}

message RegisterRequest {
  string username = 1;
  string password = 2;
  string nickname = 3;
  string wallet_addr = 4;
  string referral_code = 5;
  string captcha_id = 6;
  string captcha_code = 7;
}

message RegisterResponse {
  int64 id = 1;
  string username = 2;
  string nickname = 3;
  string wallet_addr = 4;
  string user_referral_code = 5;
  string referral_code = 6;
}

message LoginRequest {
  string username = 1;
  string password = 2;
  string captcha_id = 3;
  string captcha_code = 4;
}

message LoginResponse {
  string token = 1;
  int64 user_id = 2;
  string username = 3;
  string nickname = 4;
  string wallet_addr = 5;
  string user_referral_code = 6;
  string referral_code = 7;
}

message GetUserInfoResponse {
  int64 id = 1;
  string username = 2;
  string nickname = 3;
  string wallet_addr = 4;
  string user_referral_code = 5;
  string referral_code = 6;
}

message UpdateUserInfoReqest {
  string nickname = 1;
  string wallet_addr = 2;
}

message ChangePassWdRequest {
  string old = 1;
  string new = 2;
}

message CaptchaResponse {
  string captcha_id = 1;
  string img_base64 = 2;
}


service User {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc GetUserInfo (Empty) returns (GetUserInfoResponse);
  rpc UpdateUserInfo (UpdateUserInfoReqest) returns (Empty);
  rpc ChangePassword (ChangePassWdRequest) returns (Empty);
  rpc GenerateCaptcha (Empty) returns (CaptchaResponse);
}